Clean date, execs compact, fixed broadcasts, better output overflow

--- a/app/assets/stylesheets/jil.scss
+++ b/app/assets/stylesheets/jil.scss
@@ -259,6 +259,7 @@ input[type=submit] {
     color: lightgrey;
     font-size: 12px;
     white-space: pre-wrap;
+    overflow: auto;
   }
 }
 
